force-app/main/default/objects/HRCSVC_Product_Usage__c/HRCSVC_Product_Usage__c.object-meta.xml
<CustomObject>
    <label>Product Usage</label>
    <nameField>
        <label>Product Usage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Usages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>