force-app/main/default/objects/HRCSVC_Product_Usage__c/fields/Asset_Product_Model__c.field-meta.xml
<CustomField>
    <fullName>Asset_Product_Model__c</fullName>
    <formula>HRCSVC_Asset__r.HRCFSL_Product_Family__c</formula>
    <label>Asset Product Model</label>
    <type>Text</type>
</CustomField>