force-app/main/default/objects/HRCSVC_Product_Usage__c/fields/HRCSVC_Date_of_Reading__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Date_of_Reading__c</fullName>
    <label>Date of Reading</label>
    <type>Date</type>
</CustomField>