force-app/main/default/objects/HRCSVC_Product_Usage__c/fields/HRCSVC_Product_Usage_Description__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Product_Usage_Description__c</fullName>
    <label>Product Usage Description</label>
    <length>250</length>
    <type>Text</type>
</CustomField>