force-app/main/default/objects/HRCSVC_Product_Usage__c/fields/HRCSVC_Quantity__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>