force-app/main/default/objects/HRCSVC_Product_Usage__c/fields/HRCSVC_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Work_Order__c</fullName>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Product Usages</relationshipLabel>
    <relationshipName>Product_Usages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>