force-app/main/default/objects/HRCSVC_Product_Usage__c/fields/Usage_Measurement_Reading__c.field-meta.xml
<CustomField>
    <fullName>Usage_Measurement_Reading__c</fullName>
    <formula>HRCSVC_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usage Measurement Reading</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>